ihb-platform-backend/k8s/monitoring/monitoring-grafana-ingress.yaml
# Ingress для доступа к Grafana (внешний хост grafana.arch.homework)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stack-grafana
                port:
                  number: 80
